# MI_Demo

./: .gitignore  .mcp.json  README.md  docker-compose.yml
.github/workflows/: deploy-production.yml  deploy-staging.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_poc_schema.py  0002_river_section_percent_filled.py
backend/app/: __init__.py  cli.py  db.py  env.py  init_app.py  main.py  models.py  routes.py  services.py  supabase_service.py
backend/app/tests/: test_demo_service.py  test_routes.py  test_supabase_service.py
demo_data/: default_dataset.json
frontend/: .dockerignore  Dockerfile  eslint.config.js  package.json
frontend/src/lib/: api.ts  display.test.ts  display.ts  placeSlugs.ts  types.ts
frontend/src/lib/components/: DashboardHitProjector.svelte  DashboardScene.svelte  FlowingRiverSurface.svelte  OrbitRig.svelte  RegionScene.svelte  TopographicGround.svelte
frontend/src/routes/: +page.server.ts  +page.svelte
frontend/src/routes/places/[slug]/: +page.server.ts  +page.svelte
kube/base/: backend.yaml  frontend.yaml  ingress.yaml
kube/overlays/prod/: configmap.yaml  ingress-patch.yaml  kustomization.yaml  namespace.yaml  secret.template.yaml
kube/overlays/staging/: configmap.yaml  ingress-patch.yaml  kustomization.yaml  namespace.yaml  secret.template.yaml
planning/: README.md  component-inspection.md  dashboard-overview.md  demo-scope.md  product-concept.md  region-3d-view.md
