[project]
name = "mi-demo-backend"
version = "0.1.0"
description = "FastAPI backend for the MI control panel PoC."
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic==1.15.2",
    "fastapi==0.115.12",
    "psycopg[binary]==3.2.13",
    "python-dotenv==1.1.0",
    "sqlmodel==0.0.24",
    "uvicorn==0.34.2",
]

[project.scripts]
backend = "app.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "ruff==0.11.8",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP007"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
pythonpath = ["."]
